2009-08-20  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::Emit*Async): Removed.
	(TextBox::EmitSelectionChanged): Updated to use EmitAsync().
	(TextBox::EmitTextChanged): Same.
	(PasswordBox::EmitTextChanged): Same.

	* popup.cpp (OnPropertyChanged): Use the new EmitAsync() method.

	* dependencyobject.cpp (EventObject::EmitAsync): New method to
	emit an event asynchronously.

	r:alan

2009-08-20  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (emit_selection_changed): Pass along the generation
	to the virtual EmitSelectionChanged() method.
	(emit_text_changed): Same.
	(EmitSelectionChangedAsync): Use a custom closure so that we can
	capture the current event generation to use when we actuall emit
	it later.
	(EmitTextChangedAsync): Same.

	r:toshok

2009-08-20  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Setting OBJECT properties allows objects to be parsed
	from strings that shouldn't normally be.  Such as SolidColorBrush
	and PointCollection.

2009-08-19  Jeffrey Stedfast  <fejj@novell.com>

	* fontmanager.cpp (FontFace::GetExtents): Updated to implement the
	same algorithm used by Silverlight.

	r:jackson

2009-08-19  Jackson Harper  <jackson@ximian.com>

	* playlist.cpp: Its possible to queue an async operation and then
	call Dispose before that operation has taken place. This patch
	makes Playlist delay its unref and adds guards in its async
	callback functions to avoid this. Fixes http://www.nederland24.nl/
	r:spouliot
	
2009-08-18  Jackson Harper  <jackson@ximian.com>

	* template.cpp: Remove not very helpful and somewhat scary looking
	debug spew. r:toshok

2009-08-18  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (word_type_changed): Partial revert for previous
	commit as it broke drt #208.

	r:toshok

2009-08-17  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for drt #411.

	* layout.cpp (SetMaxWidth): If setting MaxWidth to 0, treat it as
	infinite.
	(word_type_changed): Allow alphabetic characters inside