@@ -1,3 +1,11 @@
+2009-08-21  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls/GridTestAuto.cs: When assigning
+	  sizes to grid segments, if the current UIElement spans
+	  across star segments, then extra height will only be
+	  assigned to those star segments. Otherwise extra height will
+	  be assigned to Auto and Pixel segments. r: sde
+
 2009-08-20  Alan McGovern  <amcgovern@novell.com>
 
 	* System.Windows.Controls/GridTestAuto.cs: Add a missing
